# linkyboard-ai

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_INTEGRATION.md  Dockerfile  Dockerfile.dev  IMPLEMENTED_FEATURES_LIST.md  Jenkinsfile  Makefile  Pipfile  README.md  alembic.ini  docker-compose.yml  migrate.sh  model_catalog_data.json  pyproject.toml  pytest.ini  requirements.txt  test_basic_extraction_demo.py  test_dedup.py  test_integration.py  test_new_audio_system.py  test_observability.py  test_smart_extraction_demo.py  test_wtu.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  improvement.yml  task.yml
.github/workflows/: cicd-dev  cicd-dev.yml
app/: __init__.py  dedup_detection.py  main.py
app/agents/: __init__.py  initialization.py  mode_selector.py  router.py  schemas.py  test_content_agent.py
app/ai/: __init__.py  openai_service.py
app/api/: __init__.py
app/audio/: __init__.py  temp_file_manager.py  whisper_stt.py  youtube_downloader.py  youtube_stt_service.py
app/board_ai/: __init__.py  router.py  schemas.py  service.py
app/board_analytics/: __init__.py  service.py
app/board_sync/: __init__.py  router.py  schemas.py  service.py
app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  migration.py  model_catalog_init.py  models.py  schemas.py  storage.py  utils.py
app/domains/: __init__.py
app/embedding/: __init__.py  repository.py  service.py
app/metrics/: __init__.py  model_catalog_service.py  model_policy_service.py  pricing_service.py  token_counter.py  token_quota_service.py  usage_recorder.py  usage_recorder_v2.py  wtu_calculator.py
app/monitoring/: __init__.py
app/recommendation/: __init__.py
app/user/: user_repository.py
app/user_quota/: __init__.py  router.py  schemas.py
app/user_sync/: __init__.py  router.py  schemas.py  service.py
app/with_ai/: __init__.py  router.py  schemas.py  service.py
bruno/environments/: local.bru
docs/: AGENT_SYSTEM_SUMMARY.md  BOARD_MANAGEMENT.md  COST_REDUCTION_PLAN.md  LANGSMITH_LANGGRAPH_INTEGRATION.md  PROJECT_STRUCTURE.md  SYSTEM_ARCHITECTURE.md  TOKEN_QUOTA_IMPLEMENTATION.md  TOKEN_QUOTA_SYSTEM.md  USER_SCENARIOS.md  YOUTUBE_STT_IMPLEMENTATION.md  todo.md  topics-test-summary.md
docs/guides/: 01-project-structure.md  02-coding-conventions.md  03-api-response.md  04-exception-handling.md  05-database.md  06-testing.md  07-deployment.md  08-new-domain-guide.md  09-commit-message.md  10-branch-naming.md  11-core-llm-integration.md  README.md
docs/requirements/: README.md  ai-api-spec.md  content-api-spec.md  orchestration-spec.md  topic-board-api-spec.md  user-api-spec.md
migrations/: __init__.py  env.py  run_migration.py  script.py.mako
migrations/versions/: .gitkeep  01fc0e83bc7a_순환참조_에러_업데이트.py  0b23f081d071_item_id_외부_동기화.py  13b5ead0b510_add_model_pricing_table_and_update_.py  143aed6078d3_item_embedding_metadata_table_생성.py  1c6715b5-101_insert_initial_model_catalog_data.py  1ecee6ac3025_category_tag_분리.py  20251201_3a95850e3370_create_users_table.py  20251203_035bdc961929_create_users_table.py  20251204_684968767c83_remove_processing_status_column.py  (+15 more)
scripts/: README.md  check_models.py  commit-msg.py  init_model_pricing.py  manage_model_catalog.py  quick_test.py  run-tests.sh  test_langfuse_connection.py  test_llm_integration.py  test_model_catalog.py  test_multilingual_stt.py
tests/: conftest.py  test_board_ai_service.py  test_clipper_service.py  test_embedding_tasks.py  test_item_repository.py  test_model_picker_integration.py  test_model_picker_unit.py  test_smart_extraction.py  test_user_repository.py  test_user_service.py  test_youtube_smart_extraction.py
(+263 files in other folders)
